- attraction tabs responsive fix - hotel fare section aligned below to air fare section

--- a/app/Styles/Style.css
+++ b/app/Styles/Style.css
@@ -766,7 +766,7 @@ i.calendar.active, .input-box:hover i.calendar {
                 border-radius: 0px 0px 0 0;
                 color: #fff;
                 display: block;
-                padding: 5px 10px;
+                padding: 8px 6px;
             }
 
                 .atractions-nav-tabs ul li.active a, .atractions-nav-tabs ul li a:hover {
